test/libyul/yulSyntaxTests/builtin_identifier_5.yul
{
	function f() -> add {}
}
// ----
// ParserError 5568: (19-22='add'): Cannot use builtin function name "add" as identifier name.
